[tool.poetry]
name = "repl_python3_TextSynth-Bot"
version = "0.1.0"
description = ""
authors = ["AnnasVirtual <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
python-dotenv = "^0.19.0"
tweepy = "^3.10.0"
waitress = "^2.0.0"
aiohttp = "^3.7.4"
better-profanity = "^0.7.0"
Flask = "^2.0.1"
ParallelDots = "^3.2.14"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
